--- a/src/css/style-2.css
+++ b/src/css/style-2.css
@@ -1107,7 +1107,7 @@ width: 60px;
     position: absolute;
     width: 1454px;
     height: 250px;
-    background-color: #fafafa;
+    background-color: #ffffff;
     top: -55%;
     left: -12px;
     transform: rotate(5deg);
