--- a/src/css/style-2.css
+++ b/src/css/style-2.css
@@ -1564,14 +1564,14 @@ form.verifikasi button{
     outline: none;
     width: 154px;
     min-height: 50px;
-    border-radius: 50px;
+    border-radius: 2px;
     padding: 18px 27px 18px 27px;
     font-family: "SourceSansPro-Regular",sans-serif;
     font-size: 16px;
-    background-color: #DCA431;
+    background-color: #466a9a;
     margin-top: 32px;
     color: #FFFFFF;
-    box-shadow: 0 0 15px 0 rgba(220, 164, 49, 0.5);
+  box-shadow: 0 0 15px 0 rgba(70, 106, 154, 0.5);
     webkit-transition: all 0.45s ease-in-out;
     -moz-transition: all 0.45s ease-in-out;
     -o-transition: all 0.45s ease-in-out;
@@ -1580,9 +1580,9 @@ form.verifikasi button{
     cursor: pointer;
 }
 #section input[type="text"],#section input[type="password"],#section input[type="email"]{
-  width: 350px;
+  width: 100%;
     height: 50px;
-    border-radius: 100px;
+    border-radius: 2px;
     border: none;
     background-color: #f2f3f4;
     padding-left: 33px;
